# pythondev

./: LICENSE.md  Makefile  README.md  pyproject.toml
03_ThreeWayAndTkinter/src/: __main__.py  application.py  cell.py  direction.py  game_field.py  menubar.py
04_PublicRepositoryEvents/src/: Simplified.py  __main__.py
04_Puzzle/src/: __main__.py  application.py
05_SshAndSmartWidgets/src/: ParseError.py  __main__.py  application.py  geometry_syntax.py  oval_parameters.py  preview.py
