[tool.poetry]
name = "Python Development"
version = "0.1.0"
description = "Solutions for Python Development course"
authors = ["Zhuravsky Max <paperlark@yandex.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
